--- a/StudentInfoSystem/MainWindow.xaml
+++ b/StudentInfoSystem/MainWindow.xaml
@@ -52,6 +52,7 @@
                 <Button Content="Get Data" HorizontalAlignment="Left" Margin="239,188,0,0" VerticalAlignment="Top" Grid.Column="1" Click="onDisplayData"/>
                 <Button x:Name="enableBtn" Content="Enable" HorizontalAlignment="Left" Margin="373,188,0,0" VerticalAlignment="Top" Click="enableBtn_Click" Grid.Column="1"/>
                 <Button x:Name="disableBtn" Content="Disable" HorizontalAlignment="Left" Margin="313,188,0,0" VerticalAlignment="Top" Click="onDisable" Grid.Column="1"/>
+                <Button x:Name="emptyBtn" Content="Empty Student" HorizontalAlignment="Left" Margin="433,188,0,0" VerticalAlignment="Top" Click="copyDataForEmpty" Grid.Column="1"/>
             </Grid>
         </GroupBox>
 
